--- a/mark.html
+++ b/mark.html
@@ -25,7 +25,7 @@
             position: relative;
             margin: 0 0 25px 0;
             padding: 40px 15px;
-            background: url('../Web_Project/Images/Grade-title.jpg') center/cover no-repeat;
+            background: url('Images/Grade-title.jpg') center/cover no-repeat;
             border-radius: 7px;
             text-align: center;
             color: white;
